# exam

T9/: CMakeLists.txt  README.md
T9/src/common/: convertable.h  symbol-info.cpp  symbol-info.h  symbol-init.h  t9-converter.cpp  t9-converter.h
T9/src/main/: main.cpp
T9/tests/: CMakeLists.txt  main.cpp
T9/tests/samples/: t9-1.txt
T9/tests/units/: gtest-converter.h  gtest-factory.h
